Added some results for L, I and H

--- a/Implementation/Implementation.tex
+++ b/Implementation/Implementation.tex
@@ -3,3 +3,5 @@
 \input{Implementation/use of hardware.tex}
 \chapter{Restricted Boltzmann Machine}
 \input{Implementation/Restricted Boltzmann Machine/Restricted Boltzmann Machine}
+\chapter{Optimazation of Hyperparameters}
+\input{Implementation/Optimazation/optimazation}
