--- a/Implementation/Restricted Boltzmann Machine/The base structure.tex
+++ b/Implementation/Restricted Boltzmann Machine/The base structure.tex
@@ -1,4 +1,4 @@
-\subsection{The base structure}
+\section{The base structure}
 
-We have implemented the restricted Boltzmann machine in separated parts. The parts are connected to each other through the main file, \mintinline{python}{RBMmodules\\main.py}. The main \mintinline{python}{run} function takes in the options for that specific run, the model (the quantum system) in question and the machine setup as arguments. These arguments are sent to the different parts of the RBM: the initializer, the local energy function and finally the solver, which outputs the predicted ground state energy. In this section we will go over the machine model initialization briefly, while going more in depth into the local energy function and the solver, as these are less straight forward.
+We have implemented the restricted Boltzmann machine in separated parts. The parts are connected to each other through the main file, \mintinline{python}{RBMmodules\\main.py}. The main \mintinline{python}{run} function takes in the options for that specific run, the model (the quantum system) in question and the machine setup as arguments. These arguments are sent to the different parts of the RBM: the initializer, the local energy function, the adaptive learning rate function and finally the solver, which outputs the predicted ground state energy. In this section we will go over the machine model initialization briefly, while going more in depth into the local energy function and the solver, as these are less straight forward.
 
