--- a/Results and Discussion/The Heisenberg model.tex
+++ b/Results and Discussion/The Heisenberg model.tex
@@ -1,4 +1,71 @@
 \section{The Heisenberg model}
+
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{Figures/Plots/Heisen/Result14conv}
+  \end{center}
+  \caption{The convergence graph of the RBM mean energy output for the Heisenberg model with $N = 14$ particles, $M=1$, and $J=-1$ and $L=-0.5$.}
+\end{figure}
+
+The two-dimensional Heisenberg model results in the following convergence graph:
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{Figures/Plots/Heisen/Result9conv}
+  \end{center}
+  \caption{The convergence graph of the RBM mean energy output for the two-dimensional Heisenberg model with $N = 3$ particles, $M=3$, and $J=-1$ and $L=-0.5$.}
+\end{figure}
+
 \subsection{The effect of \texorpdfstring{$J$}{J} on RBM prediction accuracy}
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{Figures/Plots/Heisen/[J][-1.0-0.0][e=500][n=10][N=10][M=1][L=0]}
+  \end{center}
+  \caption{The variance of the restricted Boltzmann machine local energy output for the Heisenberg model with $10$ lattice points and $L=0$.}
+\end{figure}
+
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{Figures/Plots/Heisen/[J][-1.0-0.0][e=500][n=10][N=10][M=1][L=-0.5]}
+  \end{center}
+  \caption{The variance of the restricted Boltzmann machine local energy output for the Heisenberg model with $10$ lattice points and $L=-0.5$.}
+\end{figure}
+
+Looking at the two-dimensional version we get
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{Figures/Plots/Heisen/[J][-1.0-0.0][e=500][n=9][N=3][M=3][L=0]}
+  \end{center}
+  \caption{The variance of the restricted Boltzmann machine local energy output for the two=two-dimensional Heisenberg model with $9$ lattice points, $N=3$ and $M=3$, and $L=0$.}
+\end{figure}
+
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{Figures/Plots/Heisen/[J][-1.0-0.0][e=500][n=9][N=3][M=3][L=-0.5]}
+  \end{center}
+  \caption{The variance of the restricted Boltzmann machine local energy output for the two-dimensional Heisenberg model with $9$ lattice points, $N=3$ and $M=3$, and $L=-0.5$.}
+\end{figure}
 \subsection{The effect of \texorpdfstring{$L$}{L} on RBM prediction accuracy}
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{Figures/Plots/Heisen/[L][-0.5-0.0][e=500][n=10][N=10][M=1][J=-1]}
+  \end{center}
+  \caption{The variance of the restricted Boltzmann machine local energy output for the Heisenberg model with $10$ lattice points and $J=-1$.}
+\end{figure}
+
+And with two dimensions
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[width=0.95\textwidth]{Figures/Plots/Heisen/[L][-0.5-0.0][e=500][n=9][N=3][M=3][J=-1]}
+  \end{center}
+  \caption{The variance of the restricted Boltzmann machine local energy output for the Heisenberg model with $9$ lattice points, $N=3$ and $M=3$, and $J=-1$.}
+\end{figure}
+
 \subsection{Comparing computation time with diagonalization}
