--- a/Results and Discussion/resultsanddiscussion.tex
+++ b/Results and Discussion/resultsanddiscussion.tex
@@ -1,4 +1,13 @@
-\chapter{Simple Model}
-\input{Results and Discussion/Simple Model/simplemodel}
-\chapter{Main Model}
-\input{Results and Discussion/Main Model/mainmodel}
+The restricted Boltzmann machine is up and running and the hyperparamters has been optimized for the different system sizes. We will now thoroughly test the machines accuracy over the different system variables. Each system's ground state energy evolves differently, and that may affect the machine's accuracy, as well as the gap between the ground state and first excited state and the distance from the initialized machine state. For each system we will go through each variable in turn and see how the machine accuracy evolves with it. Following we will do a comparison of the computation time between the restricted Boltzmann machine and diagonalization of the Hamiltonian matrix through Numpy\cite{harris2020array}.
+
+\chapter{The Lipkin model}
+\input{Results and Discussion/The Lipkin model}
+\chapter{The Ising model}
+\input{Results and Discussion/The Ising model}
+\chapter{The Heisenberg model}
+\input{Results and Discussion/The Heisenberg model}
+\chapter{The Pairing model}
+\input{Results and Discussion/The Pairing model}
+\chapter{Comparing Metropolis-Hasting algorithm and the Gibbs sampling method}
+\input{Results and Discussion/Met-hast vs gibbs}
+
