--- a/Theory/Machine Learning/Controls and Errors.tex
+++ b/Theory/Machine Learning/Controls and Errors.tex
@@ -1,4 +1,4 @@
-\section{Controls and Errors}
+\section{Controls and Errors}\label{subsec:variance_monte}
 
 Seeing how accurate a model is can be use full both during training, to see how well it optimizes, and for a trained model. The simplest way to check the accuracy is to look at the difference from the true value of whatever the model was supposed to find. If we define the model's predicted answer as $z_{m}$ and the true answer as $z_{t}$ we have that the answer is:
 
