--- a/Theory/Many-Body Physics/Methods and Algorithms.tex
+++ b/Theory/Many-Body Physics/Methods and Algorithms.tex
@@ -70,4 +70,4 @@ $$C = \begin{bmatrix}
     c_n
 \end{bmatrix} \; .$$
 
-Diagonalizing $H$ will then give us the eigenvalues $E$ as the energy of the different levels of the system.
+Diagonalizing $H$ will then give us the eigenvalues $E$ as the energy of the different eigenstates of the system.
