--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,6 @@
 \documentclass[a4paper]{report}
 \synctex=1
 \input{Utility/packages}
-
 \begin{document}
 
 \title{Quantum Boltzmann Machines and Auto-encoders}
@@ -29,5 +28,6 @@
 \part{Conclusion}
 \input{conclusion}
 
-\bibliography{bibliography}
+\bibliography{refrences}
+
 \end{document}
