--- a/refrences.bib
+++ b/refrences.bib
@@ -128,7 +128,6 @@ journal = {Parallel Distributed Process}
   volume = {108},
   issue = {5},
   pages = {058301},
-  numpages = {5},
   year = {2012},
   month = {Jan},
   publisher = {American Physical Society},
@@ -187,7 +186,7 @@ journal = {Parallel Distributed Process}
     year={1999},
     publisher={Springer New York},
     address={New York, NY},
-    pages={285--361},
+    pages={285-361},
     abstract={The previous chapter developed simulation techniques that could be called generic, since they require only a limited amount of information about the distribution to be simulated. For example, the generic algorithm ARMS (6.3.3) aims at reproducing the density f of this distribution in an automatic manner. However, Metropolis-Hastings algorithms can achieve higher levels of efficiency when they take into account the specifics of the target distribution f, in particular through the calibration of the acceptance rate (see 6.4.1). Moving even further in this direction, the properties and performance of the Gibbs sampling method presented in this chapter are very closely tied to the distribution f. This is because the choice of instrumental distribution is essentially reduced to a choice between a finite number of possibilities.},
     isbn={978-1-4757-3071-5},
     doi={10.1007/978-1-4757-3071-5_7},
@@ -195,7 +194,7 @@ journal = {Parallel Distributed Process}
 }
 
 @article{netket3:2022,
-	title={{NetKet 3: Machine Learning Toolbox for Many-Body Quantum Systems}},
+	title={NetKet 3: Machine Learning Toolbox for Many-Body Quantum Systems},
   author={Filippo Vicentini and Damian Hofmann and Attila Szab\'{o} and Dian Wu and Christopher Roth and Clemens Giuliani and Gabriel Pescia and Jannes Nys and Vladimir Vargas-Calderón and Nikita Astrakhantsev and Giuseppe Carleo},
 	journal={SciPost Phys. Codebases},
 	pages={7},
@@ -205,28 +204,20 @@ journal = {Parallel Distributed Process}
 	url={https://scipost.org/10.21468/SciPostPhysCodeb.7}
 }
 
-@article{         harris2020array,
- title         = {Array programming with {NumPy}},
- author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
-                 van der Walt and Ralf Gommers and Pauli Virtanen and David
-                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
-                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
-                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
-                 Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
-                 R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
-                 G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
-                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
-                 Travis E. Oliphant},
- year          = {2020},
- month         = {Sep},
- journal       = {Nature},
- volume        = {585},
- number        = {7825},
- pages         = {357--362},
- doi           = {10.1038/s41586-020-2649-2},
- publisher     = {Springer Science and Business Media {LLC}},
- url           = {https://doi.org/10.1038/s41586-020-2649-2}
+@article{harris2020array,
+ title={Array programming with NumPy},
+ author={Charles R. Harris and K. Jarrod Millman and St{\'e}fan J. van der Walt and Ralf Gommers and Pauli Virtanen and David Cournapeau and Eric Wieser and Julian Taylor and Sebastian Berg and Nathaniel J. Smith and Robert Kern and Matti Picus and Stephan Hoyer and Marten H. van Kerkwijk and Matthew Brett and Allan Haldane and Jaime Fern{\'a}ndez del R{\'i}o and Mark Wiebe and Pearu Peterson and Pierre G{\'e}rard-Marchant and Kevin Sheppard and Tyler Reddy and Warren Weckesser and Hameer Abbasi and Christoph Gohlke and Travis E. Oliphant},
+ year={2020},
+ month={Sep},
+ journal={Nature},
+ volume={585},
+ number={7825},
+ pages={357-362},
+ doi={10.1038/s41586-020-2649-2},
+ publisher={Springer Science and Business Media LLC},
+ url={https://doi.org/10.1038/s41586-020-2649-2}
 }
+
 
 @article{netket2:2019,
   author    = {Carleo, Giuseppe and Choo, Kenny and Hofmann, Damian and
@@ -267,7 +258,7 @@ journal = {Parallel Distributed Process}
 
 
 @article{gehinton,
-author = {G. E. Hinton  and R. R. Salakhutdinov },
+author = {G. E. Hinton and R. R. Salakhutdinov},
 title = {Reducing the Dimensionality of Data with Neural Networks},
 journal = {Science},
 volume = {313},
