--- a/Implementation/Restricted Boltzmann Machine/Calculation of local energy.tex
+++ b/Implementation/Restricted Boltzmann Machine/Calculation of local energy.tex
@@ -3,7 +3,7 @@
 At the sampling part we skipped over an important line.
 
 \begin{minted}{python}
-  E_local = local_energy_func(dist_s)
+  E_local = hamiltonian.local_energy(dist_s)
 \end{minted}
 
 Where we have to calculate the local energy of the quantum system in question. We know that the local energy of a particular sample state $\ket{s}$ can be calculated as
@@ -16,31 +16,35 @@ Where we have to calculate the local energy of the quantum system in question. W
 but here we will explain in more detail how this is done for the each of the different systems we are looking at. First of all it is important to remember the structure of the input to our function calculating the local energy. We want to vectorize the calculations as much as possible so the input will be all $m$ samples, taken with the Gibbs or Metropolis-Hastings algorithm, together in one array:
 
 \begin{equation}
-  \mathbf{S} = \left [ s_0, s_1, \dots, s_m \right] \; .
+  \mathbf{S} = \left [ s_0, s_1, \dots, s_m \right] \; ,
   \label{eq:Samples_set}
 \end{equation}
 
-To calculate the local energy for the Lipkin and Pairing model we need to have the wave function $\ket{\psi__{rbm}}$.
+where $s_0, s_1, \dots, s_n \in \mathbf{B}$, where $\mathbf{B}$ is the basis of the system. To calculate the local energy the wave function $\ket{\psi__{rbm}}$:
 
 \begin{equation}
-  \ket{\Psi_{rbm}} = \alpha_0\ket{\psi_0} + \alpha_1\ket{\psi_1} + \dots + \alpha_n\ket{\psi_n}
+  \ket{\Psi_{rbm}} = \alpha_0\ket{\psi_0} + \alpha_1\ket{\psi_1} + \dots + \alpha_n\ket{\psi_n} \; ,
 \end{equation}
 
-The coefficients can be approximated. If we define $N_i$ as the number of state $\ket{\psi_i}$ in our sample set $\boldsymbol{S}$, then we have.
+but we don't have the exact coefficients $\alpha_0, \alpha_1, \dots, \alpha_n$, so we will need to approximate it. When we insert a random state into the hidden layer of the RBM and sample the it we can think of it as a measurement of the quantum state. If we denote $\ket{b}$ as the resulting state of such a measurement, the probability of a measurement resulting in a peculiar basis state is given by:
 
 \begin{equation}
-  \ket{\Psi_{rbm}} \approx \frac{N_0}{m}\ket{\psi_0} +\frac{N_1}{m}\ket{\psi_1} +\dots + \frac{N_n}{m}\ket{\psi_n}
+  P(\ket{b} = \ket{\psi_i}) =\right | \alpha_i \left |^2 \; .
+  \label{eq:measurement_imp}
 \end{equation}
 
-as an approximation of the machine state.
-
-Looking at the different parts of $E_{loc}$ we have for a example state $\ket{b} \in \boldsymbol{S}$ that
+And we can thus use our sample set $\mathbf{S}$, which is a collection of many measurements of the machine state, to approximate the coefficients $\{\alpha\}$. If we denote $N_i$ as the number of $\ket{\psi_i}$ we have in our sample set, we can approximate the machine state as:
 
 \begin{equation}
-  \braket{b}{\phi_{rbm}} = \alpha_i ,
+  \ket{\Psi_{rbm}} \approx \sqrt{\frac{N_0}{m}}\ket{\psi_0} +\sqrt{\frac{N_1}{m}}\ket{\psi_1} +\dots + \sqrt{\frac{N_n}{m}}\ket{\psi_n} \; .
 \end{equation}
 
-where $i$ would correspond to where the condition $\ket{b} = \ket{\phi_i}$ is fulfilled. To calculate the numerator of $E_{loc}$ we start with
+If take a look at the different parts of the local energy, \ref{eq:local_imp}, we have the normalization factor for a basis state $\ket{b} = \ket{\psi_i} \in \mathbf{B}$.
+
+$$\braket{b}{\Psi_{rbm}} = \alpha_i \; .$$
+
+
+To calculate the numerator of $E_{local}$ we start with
 
 \begin{equation}
   H\ket{\Psi_{rbm}} =  \alpha_0H\ket{\psi_0} + \alpha_1H\ket{\psi_1} + \dots + \alpha_nH\ket{\psi_n}
@@ -67,11 +71,62 @@ We then have that for the example state $\ket{b}$
   \bra{b}H\ket{\Psi_{rbm}} = \sum_{i=0}^n \alpha_j\beta_{i,j} \; ,
 \end{equation}
 
-where $j$ again is the corresponding state $\ket{b} = \ket{\psi_j}$.
+where $j$ again is the corresponding state $\ket{b} = \ket{\psi_j}$. The local energy of each sample can then be calculated by this code snippet.
 
-In the practical calculations we will use the approximated coefficients. To do so we first we create an array of basis states.
+\begin{minted}{python}
+def local_energy(H, amplitudes):
+    weight, non_zero_mask, mask = amplitudes
+    non_zero = weight[non_zero_mask]
+    non_zero_H = H[non_zero_mask]
+    
+    E = torch.sum(non_zero[:,None]*non_zero_H, dim=0)/weight
 
-\begin{minted}{python} 
+    return E[mask]
+\end{minted}
+
+Where we have removed the rows of the Hamiltonian matrix whose corresponding basis has a amplitude of zero in our machine state. The 5th line is where the contributions are summed together, where we use a broadcasting functionality of PyTorch.
+
+\begin{minted}{python}
+    E = torch.sum(non_zero[:,None]*non_zero_H, dim=0)/weight
+\end{minted}
+
+If we imagine a basis size of four states we would have a \mintinline{python}{weight} array in the form of:
+
+$$\text{\mintinline{python}{weight}} = \begin{bmatrix} \sqrt{\frac{N_0}{m}} & \sqrt{\frac{N_1}{m}} &  \sqrt{\frac{N_2}{m}} &  \sqrt{\frac{N_3}{m}}\end{bmatrix} \; .$$
+
+Assuming that each of the approximated coefficients are greater than zero to make visualization easier, we have that $\mintinline{python}{non_zero}=\mintinline{python}{weight}$. The \mintinline{python}{[:,None]} is to transpose the \mintinline{python}{non_zero} array:
+
+$$\text{\mintinline{python}{non_zero[:, None]}} = \begin{bmatrix}\sqrt{\frac{N_0}{m}} \\ \sqrt{\frac{N_1}{m}} \\  \sqrt{\frac{N_2}{m}} \\  \sqrt{\frac{N_3}{m}}\end{bmatrix} \; .$$
+
+The \mintinline{python}{*} symbol is for element-wise multiplication. The Hamiltonian matrix is in python a two-dimensional array where it is represented as a array of rows. The multiplication as it stands now doesn't match:
+
+$$\text{\mintinline{python}{non_zero[:, None]*non_zero_H}} = \begin{bmatrix}\sqrt{\frac{N_0}{m}} \\ 
+\sqrt{\frac{N_1}{m}} \\  \sqrt{\frac{N_2}{m}} \\  \sqrt{\frac{N_3}{m}}\end{bmatrix}* 
+\begin{bmatrix}
+\beta_{0,0} & \beta_{0,1} & \beta_{0,2} &\beta_{0,n} \\
+\beta_{1,0} & \beta_{1,1} & \beta_{1,2} &\beta_{1, n} \\
+\beta_{2,0} & \beta_{2,1} & \beta_{2,2}& \beta_{2, 2} \\
+\beta_{3,0} & \beta_{3,1} & \beta_{3,2}& \beta_{3, 3}\end{bmatrix}\; .$$
+
+
+The \mintinline{python}{non_zero} is therefore expanded in the direction it the axis of too few elements:
+
+$$\text{\mintinline{python}{non_zero[:, None]*non_zero_H}} = \begin{bmatrix}\sqrt{\frac{N_0}{m}} \\ 
+\sqrt{\frac{N_1}{m}} \\  \sqrt{\frac{N_2}{m}} \\  \sqrt{\frac{N_3}{m}}\end{bmatrix} \rightarrow \begin{bmatrix}\sqrt{\frac{N_0}{m}} & \sqrt{\frac{N_0}{m}} &  \sqrt{\frac{N_0}{m}} &\sqrt{\frac{N_0}{m}} \\
+\sqrt{\frac{N_1}{m}} & \sqrt{\frac{N_1}{m}} & \sqrt{\frac{N_1}{m}}& \sqrt{\frac{N_1}{m}} \\
+\sqrt{\frac{N_2}{m}} & \sqrt{\frac{N_2}{m}} & \sqrt{\frac{N_2}{m}}& \sqrt{\frac{N_2}{m}} \\
+\sqrt{\frac{N_3}{m}} & \sqrt{\frac{N_3}{m}} & \sqrt{\frac{N_3}{m}}& \sqrt{\frac{N_3}{m}}\end{bmatrix}\; .$$
+
+So we get that
+
+$$\text{\mintinline{python}{non_zero[:, None]*non_zero_H}} = \begin{bmatrix}\sqrt{\frac{N_0}{m}}\beta_{0,0} & \sqrt{\frac{N_0}{m}}\beta_{0,1} &  \sqrt{\frac{N_0}{m}}\beta_{0,2} &\sqrt{\frac{N_0}{m}}\beta_{0,n} \\
+  \sqrt{\frac{N_1}{m}}\beta_{1,0}&\sqrt{\frac{N_1}{m}}\beta_{1,1} & \sqrt{\frac{N_1}{m}}\beta_{1,2} &\sqrt{\frac{N_1}{m}}\beta_{1, n} \\
+\sqrt{\frac{N_2}{m}}\beta_{2,0} & \sqrt{\frac{N_2}{m}}\beta_{2,1} & \sqrt{\frac{N_2}{m}}\beta_{2,2}& \sqrt{\frac{N_2}{m}}\beta_{2, 2} \\
+\sqrt{\frac{N_3}{m}}\beta_{3,0} & \sqrt{\frac{N_3}{m}}\beta_{3,1} & \sqrt{\frac{N_3}{m}}\beta_{3,2}& \sqrt{\frac{N_3}{m}}\beta_{3, 3}\end{bmatrix}\; . $$
+
+We then sum the rows together and divide by the machine state amplitudes. The calculation is only done on the basis states and then we afterwards extract the corresponding energy for each sample through as mask \mintinline{python}{E[mask]}. To do this calculation if the first place we need to derive the approximated amplitudes. To do so we first we create an array of basis states.
+
+\begin{minted}{python}
 def create_basis(n, dtype, device):
     basis = torch.tensor(
         list(itertools.product([0, 1], repeat=n)),
@@ -81,47 +136,25 @@ def create_basis(n, dtype, device):
     return basis
 \end{minted}
 
-where the \mintinline{python}{itertools.product(...)} creates all combinations of 0 and 1 into a array, and the rest is to make into a PyTorch tensor. With the basis in place we can check it against our samples.
+where the \mintinline{python}{itertools.product(...)} creates all combinations of 0 and 1 into a array, and the rest is to make into a PyTorch tensor. With the basis in place we can check it against our samples. Then we check each sample which basis state it is:
 
 \begin{minted}{python}
-  
 def amplitudes(samples, basis):
-    weight = torch.sum(
-      torch.all(samples[:, None] == basis, dim = -1), 
-      dim=0
-    )
+    size = samples.shape[0]
+    weight = torch.sum(torch.all(samples[:, None] == basis, dim = -1), dim=0)
+    weight = weight/size
+    weight = torch.sqrt(weight)
+    non_zero_mask = torch.where(weight!=0)
+    weight[weight==0] = np.sqrt(1/size)
+    mask = torch.where(torch.all(samples[:, None] == basis, dim = -1))[1]
 
-    non_zero_weight = weight[weight!=0]
-    weight[weight==0] = 1
-
-    mask = torch.where(
-      torch.all(samples[:, None] == basis, dim = -1)
-    )[1]
-
-    diff_basis = torch.sum(
-        torch.logical_xor(basis[:, None], basis), dim=-1
-    )[weight!=0]
-
-    return weight, non_zero_weight, mask, diff_basis
+    return weight, non_zero_mask, mask
 \end{minted}
 
-The \mintinline{python}{weight} creates an array of where it has counted how many times each of the basis states appear in the sample set. \mintinline{python}{non_zero_weight} is to prevent division by zero when calculating the local energy when a basis state is not a part of the machine state. The \mintinline{python}{mask} is a tool to only needing to calculate the local energy for each basis state instead of each sample. We then use \mintinline{python}{mask} to extract the local energy of a sample from its matching basis state. Finally \mintinline{python}{diff_basis} checks how many particles excite up or de-excite down between each of the basis states. Using the broadcasting functionality.
-\vspace{\baselineskip}
-\\
-\begin{*equation}
-  \mintinline{python}{xor} \left (\begin{bmatrix}
-      \ket{\psi_0} \\ \vdots \\ \ket{\psi_n}
-    \end{bmatrix}, \; \left [\ket{\psi_0}, \dots , \ket{\psi_n}\right ] \right ) \rightarrow \begin{bmatrix}
-    \mintinline{python}{xor} \left (\ket{\psi_0}, \ket{\psi_0} \right ) & \dots & \mintinline{python}{xor} \left (\ket{\psi_0}, \ket{\psi_n} \right ) \\
-                                                                     \vdots   &  & \vdots \\
-    \mintinline{python}{xor} \left (\ket{\psi_n}, \ket{\psi_0} \right ) & \dots & \mintinline{python}{xor} \left (\ket{\psi_n}, \ket{\psi_n} \right )
-    \end{bmatrix}
-\end{*equation}
-\vspace{\baselineskip}
-\\
-We then have a approximation of our machine state $\ket{\psi}$ and the analysis of it to calculate the hamiltonian's effect on it. The next steps varies with the hamiltonian of the system.
+Where we once again use the broadcasting functionality to check each sample against each basis state \mintinline{python}{samples[:, None] == basis}, and sum the resulting matches. We then divide by the number of samples $m$ and take the square root as dictated by $\sqrt{\frac{N_i}{m}}$ approximation of the amplitudes. We then change the amplitudes to the basis states that isn't represented in the sample set as if it had one anyway, because we need to avoid division by zero in the \mintinline{python}{local_energy(H, samples)} function. The local energy can then be calculated if we have the Hamiltonian matrix, but the construction of these are unique to each model of course.
 
-\subsection{The Lipkin model}
+\subsection{The Lipkin Model}
+
 
 The Lipkin model hamiltonian is defined as
 
@@ -129,247 +162,118 @@ The Lipkin model hamiltonian is defined as
     H = \sum_{p\sigma} \left ( \frac{1}{2} \sigma \varepsilon \right ) \hc{a}{p\sigma}\op{a}{p\sigma} + \frac{V}{2}\sum_{pp'\sigma} \hc{a}{p\sigma} \hc{a}{p'\sigma} \op{a}{p'-\sigma}\op{a}{p-\sigma} + \frac{W}{2} \sum_{pp'\sigma} \hc{a}{p\sigma} \hc{a}{p'-\sigma} \op{a}{p'\sigma}\op{a}{p-\sigma} \; , 
 \end{equation}
 
-For a more structured explanation we separate the hamiltonian in three parts:
+and we have rewritten it in terms of the quasi spin operators:
 
-\begin{align}
-  H_{\varepsilon} &= \sum_{p\sigma} \left ( \frac{1}{2} \sigma \varepsilon \right ) \hc{a}{p\sigma}\op{a}{p\sigma}\\ 
-  H_V &= \frac{V}{2}\sum_{pp'\sigma} \hc{a}{p\sigma} \hc{a}{p'\sigma} \op{a}{p'-\sigma}\op{a}{p-\sigma}\\
-  H_W &= \frac{W}{2} \sum_{pp'\sigma} \hc{a}{p\sigma} \hc{a}{p'-\sigma} \op{a}{p'\sigma}\op{a}{p-\sigma}  \; .
-  \label{eq:LMG_split_H}
-\end{align}
+$$H = \varepsilon \op{J}{z} + \frac{V}{2} \left ( \op{J}{+}\op{J}{+}  + \op{J}{-}\op{J}{-} \right ) + \frac{W}{2} \left ( -N + \op{J}{+} \op{J}{-} + \op{J}{-}\op{J}{+} \right )$$
 
- A state $\ket{b}$ contributes for the different parts as follows:
+We use this to construct our Hamiltonian matrix. First we construct the quasi-spin matrices with that for $\ket{S, m}$ $m =\in {-S, \dots, S}$:
 
-\begin{itemize}
-  \item $H_{\varepsilon}$ - the same state $\ket{b}$.
-  \item $H_V$ - states that are a excited or de-excited pair away from the state $\ket{b}$.
-  \item $H_W$ - states one excited or de-excited particle away from $\ket{b}$.
-\end{itemize}
+\begin{align*}
+  \bra{m'} \hat{S}_z \ket{m} &= \delta_{m',m}m \\
+  \bra{m'} \hat{S}_+ \ket{m} &= \delta_{m', m+1}\sqrt{S(S+1)-m'm} \\
+  \bra{m'} \hate{S}_- \ket{m} &= \delta_{m'+1, m}\sqrt{S(S+1)-m'm} \\
+\end{align*}
 
-We separate the different parts then sum them together at the end.
+Done by the following code snippet
 
 \begin{minted}{python}
+def construct_spin(S):
 
-def lipkin_local(eps, V, W, samples, basis):
-    weight, non_zero_weight, mask = amplitudes(samples, basis)
+  size = int(2*S + 1)
+  J_pluss = np.zeros((size, size))
+  J_minus = np.zeros((size, size))
+  J_z = np.zeros((size, size))
+  J_y = np.zeros((size, size))
+  J_x = np.zeros((size, size))
 
-    N_0 = torch.sum(basis == 0, dim=-1)
-    N_1 = torch.sum(basis == 1, dim=-1)
+  for i in range(size):
+      for k in range(size):
+          m = i-S
+          n = k-S
 
-    diff_basis = torch.sum(
-        torch.logical_xor(basis[:, None], basis), dim=-1
-    )[weight!=0]
-    
-    H_0 = 0.5*eps*(N_1-N_0)
-    H_eps = H_0[mask]
+          pm_factor = np.sqrt(S*(S+1) -m*n)
 
-    H_1 = V*torch.sum(non_zero_weight[:, None]*(diff_basis == 2), dim=0)/weight
-    H_V = H_1[mask]
-    
-    H_2 = W*torch.sum(non_zero_weight[:, None]*(diff_basis == 1), dim=0)/weight
-    H_W = H_2[mask]
-    
-    E = (H_eps - H_V - H_W)
-    return E
+          J_pluss[i, k] = dd(m, n+1)*pm_factor
+          J_minus[i, k] = dd(m+1, n)*pm_factor
+          J_z[i, k] = dd(m,n)*m
+          J_x[i, k] = (dd(m, n+1)+dd(m+1,n))*pm_factor
+          J_y[i, k] = (dd(m, n+1)-dd(m+1,n))*pm_factor
 
+  
+  return J_z, J_pluss, J_minus, 0.5*J_x, (0.5+0.5j)*J_y
 \end{minted}
 
-For the $H_{\varepsilon}$ contribution we start of by calculating the number of particles in the first and second layer.
+We then insert the correct spin to get the size that we need and multiply the matrices together according to the Hamiltonian:
 
 \begin{minted}{python}
-    N_0 = torch.sum(unique == 0, dim=-1)
-    N_1 = torch.sum(unique == 1, dim=-1)
+def lipkin_hamiltonian(n, eps, V, W):
+    J_z, J_pluss, J_minus = construct_spin(n/2)[:3]
+    N = np.eye(int(n/2)+1)*n
+    H = eps*J_z 
+    H += V/2*(J_pluss@J_pluss + J_minus@J_minus)
+    H += W/2*(-N + J_pluss@J_minus+J_minus@J_pluss)
+    return H
 \end{minted}
 
-The particles in the first layer contribute with negative spin and the particles in the second layer contribute positively, so we get that.
+Where \mintinline{python}{N = np.eye(int(n/2)+1)*n} is the number operator.
 
-\begin{minted}{python} 
-    H_0 = 0.5*eps*(N_1-N_0)
-\end{minted}
+\subsection{The Ising Model}
 
-We then have an array of the machine states amplitudes multiplied by $\varepsilon$. Applying \mintinline{python}{mask} to this array then selects the correct value for each sample without having to calculate duplicates more than once. We then have the $H_{\varepsilon}$ contribution for each sample directly:
-
-\begin{minted}{python} 
-    H_eps = H_0[mask]
-\end{minted}
-
-We then calculate the difference between the basis states of the machine state, which is the states in \mintinline{python}{unique}, and the number of particles that change layer.
-
-\begin{minted}{python}
-    H_1 = V*torch.sum(
-      non_zero_weight[:, None]*(diff_basis == 2), 
-      dim=0
-    )/weight
-\end{minted}
-
-Here it is important to notice that even if we only take the contribution of $H\ket{\psi_i}$ where $\ket{\psi_i} \in \ket{\psi_{rbm}}$ the transformed state can contain a basis state that is not a part of the machine state. Hence the removing of zero-valued amplitudes in the \mintinline{python}{weight} array is necessary. If we assume that the machine state contains every basis state for simplicity we have that:
-\vspace{\baselineskip}
-\\
-\begin{equation*}
-  \begin{gathered}
-    \mintinline{python}{ non_zero_weight[:, None]*(diff_basis == 2)} \rightarrow \boldsymbol{M}_{diff, 2} \\
-    \\
-    \boldsymbol{M}_{diff, 2} = \begin{bmatrix}
-      N_0 \mintinline{python}{xor} \left (\ket{\psi_0}, \ket{\psi_0} \right ) & \dots & N_0  \mintinline{python}{xor} \left (\ket{\psi_0}, \ket{\psi_n} \right ) \\
-      \vdots & & \vdots \\
-      N_n  \mintinline{python}{xor} \left (\ket{\psi_n}, \ket{\psi_0} \right ) & \dots & N_n  \mintinline{python}{xor} \left (\ket{\psi_n}, \ket{\psi_n} \right )
-    \end{bmatrix}
-  \end{gathered}
-\end{equation*}
-\vspace{\baselineskip}
-\\
-And we have that $\bra{b}H\ket{\Psi_{rbm}} = \sum_{i=0}^n \alpha_j\beta_{i,j}$, so we add the rows together, which is the first dimension in python. We then divide by each of the basis states amplitude before transformation by the hamiltonian. The \mintinline{python}{mask} is then applied:
-
-\begin{minted}{python}
-    H_V = H_1[mask]
-\end{minted}
-
-For $H_W$ we have the exact same approach, only changing the condition of number of excited or de-excited particles to $1$:
-
-\begin{minted}{python}
-    H_2 = W*torch.sum(
-      non_zero_weight[:, None]*(diff_basis == 1),
-      dim=0
-    )/weight
-    H_W = H_2[mask]
-\end{minted}
-
-And lastly we subtract all the parts as defined in the full Lipkin hamiltonian:
-
-\begin{minted}{python}
-    E = (H_eps - H_V - H_W)
-    return E
-\end{minted}
-
-which we return as an array of the local energy of each of the input samples.
-
-\subsection{The Ising model}
-
-For the Ising model we can calculate the local energy directly with:
+The background for the construction of the Ising model Hamiltonian matrix has been explained in the theory section \ref{sec:ising_theory}, but we will repeat some of it here. The Hamiltonian is defined as
 
 \begin{equation}
-  H(\boldsymbol{\sigma}) = J\sum_{<i,j>}\sigma_i\sigma_j + L \sum_i \sigma_i \; ,
-  \label{eq:imp_hamil_ising}
+  H(\boldsymbol{\sigma}) =J\sum_{\langle i,j\rangle} \sigma^z_i\sigma^z_j + L \sum_j \sigma^x_j \; ,
 \end{equation}
 
-where $J$ is the interaction strength between nearest neighbors, and $L$ is the single particle energy against an external field. To calculate this efficiently we take the whole set and shift it:
-
-\begin{minted}{python}
-  def ising_local(samples):
-    spin = 2*samples - 1
-    shifted = torch.roll(spin, dim=1)
-\end{minted}
-
-where we then assume the boundary conditions:
+And we interpret the Pauli matrices as acting on the tensor product space of our system:
 
 \begin{equation}
-  \mathbf{\sigma}_0 = \mathbf{\sigma}_N \; ,
-  \label{eq:ising_boundary_imp}
+  \sigma_i^x = \mathbb{I}_{2, 1} \otimes \dots \otimes \sigma_{x, i} \otimes \dots \mathbb{I}_{2, N} \; .
+\end{equation}
+\begin{equation}
+  \sigma_i^z \sigma_{i+1}^z = \mathbb{I}_{2, 1} \otimes \dots \otimes \sigma_{z, i} \otimes \sigma_{z, i+1} \otimes \dots \otimes \mathbb{I}_{2, N} \; .
 \end{equation}
 
-as explained in \ref{sec:ising_theory}. We can then easily calculate the energy of the configuration with a sum:
+For two dimensions we need to think of coupling between rows as well as shown in the rewritten Hamiltonian:
+
+\begin{equation}
+  H_{2D}(\boldsymbol{\sigma}) =J\sum_{i = 1}^M\sum_{j = 1}^N \left (\sigma^z_{i, j}\sigma^z_{i, j + 1} + \sigma_{i, j}^z\sigma^z_{i+1, j} \right )+ L \sum_{i = 1}^M\sum_{j = 1}^N\sigma^z_{i, j} \; .
+\end{equation}
+
+To construct the Hamiltonian we will use a python library called NetKet \cite{netket3:2022}\cite{netket2:2019}\cite{mpi4jax:2021}, which is a library for study of many-body quantum systems with machine learning. We use their construction example from their website \cite{netketising}.
 
 \begin{minted}{python}
-    H_J = J*torch.sum(shifted*spin, dim=1)
-    H_L = L*torch.sum(spin, dim=1)
-    return H_J + H_L
+# From https://netket.readthedocs.io/en/v3.11.4/tutorials/gs-ising.html
+def ising_hamiltonian(N, M, J, L):
+    import netket.hilbert as hb
+    from netket.operator.spin import sigmax,sigmaz
+        hi = hb.Spin(s=1 / 2, N=N*M)
+    H = sum([L*sigmax(hi,i) for i in range(N)])
+    if M == 1:
+        H += sum([J*sigmaz(hi,i)*sigmaz(hi,(i+1)%N) for i in range(N)])
+    else:
+        for _ in range(M):
+            for i in range(N):
+                H += J*sigmaz(hi,N*i)*sigmaz(hi,(N*i+1)%N)
+                H += J*sigmaz(hi,N*i)*sigmaz(hi, (N*i+N)%(N*M)) 
+    return np.array(H.to_dense())
 \end{minted}
 
-where $H_J$ is the interaction part and $H_L$ is the external field part. The Ising model becomes drastically more interesting in higher dimensions, and we will look at the 2-dimensional Ising as well. We just expand our approach of shifting the input array. Practically the input will be a flattened array of the 2-dimensional grid.
-
-\begin{minted}{python}
-def ising_2d(samples, J, L):
-    
-    pm = 2*samples - 1
-    size = int(torch.sqrt(pm.shape)[0])
-    pm = torch.reshape(pm, (size, size))
-
-    up = torch.roll(pm, 1, 0)
-    right = torch.roll(pm, 1, 1)
-
-    H_J = J*torch.sum(up*pm+right*pm)
-    H_L = L*torch.sum(pm)
-
-    return H_L + H_J
-\end{minted}
-
-The closest neighbours in a grid is on both sides on the same row, and up and down on the column, but to not count pairs twice we only need to roll once in each direction. Reshaping the input we can use the \mintinline{python}{torch.roll(...)} function to shift the matrix in each of these directions, and then multiply and sum them together.
+Where we have added the part for the second dimension.
 
 \subsection{The Heisenberg model}
 
-The Heisenberg model's difference to the Ising model is the input, we go from binary spin to continuous, so we reuse the Ising model hamiltonians for both one and two dimensions. To change to continuous spin we use the \mintinline{python}{given_v} instead of the \mintinline{python}{binary} from the layer sampling functions described in the section about the solver.
+The Heisenberg model's difference to the Ising model is the input, we go from binary spin to continuous, so we reuse the Ising model hamiltonians for both one and two dimensions. To change to continuous spin we use the \mintinline{python}{given_v} instead of the \mintinline{python}{binary} from the layer sampling functions described in the section about the solver. 
 
-\subsection{The Pairing model}
+\subsection{The Pairing model} \label{sec:pairing_imp}
 
- The Pairing model hamiltonian can be written as
+The Pairing model Hamiltonian is given by
 
 \begin{equation}
-  \hat{H} = \epsilon \sum_{p\sigma} \left(p-1\right)\hc{a}{p\sigma}\op{a}{p\sigma} - \frac{1}{2}g\sum_{pq}\hat{P}_p^+\hat{P}_q^-
-  \label{eq:Pairing_model_imp}
+  \hat{H} = \sum_{\alpha\beta} \bra{\alpha}h_0\ket{\beta}\hc{a}{\alpha}\op{a}{\beta} + \frac{1}{4} \sum_{\alpha\beta\gamma\delta} \bra{\alpha\beta}\hat{V}\ket{\gamma\delta} \hc{a}{\alpha}\hc{a}{\beta}\op{a}{\delta}\op{a}{\gamma}
 \end{equation}
 
-Where we have that
 
-\begin{equation*}
-  \begin{gathered}
-    \hat{P}_p^+ = \hc{a}{p+}\hc{a}{p-}\\
-    \hat{P}_p^- = \op{a}{p-}\op{a}{p+}
-  \end{gathered}
-\end{equation*}
 
-First of we need to define how we will represent the states in the RBM's visual layer. In contrast to the Lipkin model, here we always have pairs moving together, so what we will do is have a $1$ in the visual layer represent one such pair. An example state
-
-$$\ket{b} = \left[\;1, 0, 1, 0 \; \right]^T \; ,$$
-
-would visually look like:
-
-\vspace{\baselineskip}
-\\
-\begin{figure}[H]
-  \begin{center}
-    \includegraphics[width=0.5\textwidth]{Figures/Drawn/Pairing/pairing_imp_exp.pdf}
-  \end{center}
-\end{figure}
-
-We add the size of the model space to a function adjusting a standard basis to accommodate our criteria:
-
-\begin{minted}{python}  
-def pairing_cutoff(basis, P):
-    mask = torch.sum(basis, dim=-1) == 2*P
-    pairing_basis = basis[mask]
-
-    return pairing_basis
-\end{minted}
-
-where we only include states where the number of particles is equal to the capacity of the model space. The excluded space is then deduced from the size of the visual layer, though it is not directly used. Further we define our function:
-
-\begin{minted}{python}
-def pairing_local_energy(eps, g, samples, basis):    
-    weight, non_zero_weight, mask, diff_basis = amplitudes(samples, basis)
-\end{minted}
-
-We then find the single particle energy contribution by summing over $(p-1)$ as the spin is already combined. Because of this we need to multiply each contribution by $2$.
-
-\begin{minted}{python} 
-    H_0 = 2*eps*torch.sum(torch.where(basis==1), dim=-1) 
-    H_eps = H_0[mask]
-\end{minted}
-
-In the model description $p$ starts at one, but since array indexing starts at zero we can sum directly without adjustments. Similar to the Lipkin model we can check for changes by using the \minintline{python}{diff_basis} matrix:
-
-\begin{minted}{python}
-    H_1 = 0.5*g*torch.sum(
-      non_zero_weight[:, None]*(diff_basis==1),
-      dim=0
-    )/weight
-    H_V = H_1[mask]
-\end{minted}
-
-where we scale it with the $\frac{1}{2}g$ as defined in the hamiltonian. We then combine them and return the local energies:
-
-\begin{minted}{python}
-    E = H_0 - H_V
-    return E
-\end{minted}
 
 
