--- a/Implementation/Restricted Boltzmann Machine/The solver.tex
+++ b/Implementation/Restricted Boltzmann Machine/The solver.tex
@@ -1,4 +1,4 @@
-\subsection{The solver}
+\section{The solver}
 
 Solving a system here means training the RBM some length of time or until a certain threshold is met, and get the machines last guess at the system's ground state energy. To train the machine we take first need to implement the sampling of each layer.
 
@@ -9,13 +9,13 @@ def sample_visual(hidden, visual_bias, W):
     return given, binary
 \end{minted}
 
-This is done in accordance to the what has been derived mathematically, where the @ symbol indicates matrix multiplication. The \mintinline{python}{S(...)} function is the sigmoid function. The given probability distribution of the layer is then sent through a bernoulli function, which returns a binary array based on the given array's distribution. Both versions are returned, so it is only minor changes that is required to go from continuous to binary visual layer. The equivalent \mintinline{python}{sampel_hidden} has only the two bias arrays switched in the \mintinline{python}{given} definition.
+This is done in accordance to the what has been derived mathematically, where the @ symbol indicates matrix multiplication. The \mintinline{python}{S(...)} function is the sigmoid function. The given probability distribution of the layer is then sent through a bernoulli function, which returns a binary array based on the given array's distribution. Both versions are returned, so it is only minor changes that is required to go from continuous to binary visual layer. The equivalent \mintinline{python}{sample_hidden} has only the two bias arrays switched in the \mintinline{python}{given} definition.
 
 The next step is to find the cost function derivative based on the biases and weights. A estimation of the machine state is needed, and this is here done with two different methods. First of we have the Metropolis-Hastings algorithm which accept states conditionally, then secondly we have Gibbs sampling, which accepts all states. The use of a condition makes Metropolis-Hastings unable to be vectorized, and therefor severely slower than Gibbs sampling. Both methods are combined into the same function, here we have left some variable definitions out for ease of reading or lack of relevance.
 
 \begin{minted}{python}
 
-def MonteCarlo(cycles, local_energy_func, gibbs_k, model):
+def MonteCarlo(cycles, H, masking_func, gibbs_k, model):
     hidden = torch.bernoulli(torch.rand(
         cycles, 
         hidden_n, 
@@ -28,7 +28,8 @@ def MonteCarlo(cycles, local_energy_func, gibbs_k, model):
     dPsidvb = (dist_s - vb)
     dPsidhb = 1/(torch.exp(-hb-dist_s@W)+ 1)
     dPsidW = dist_s[:, :, None]*dPsidhb[:, None, :]
-    E_local = local_energy_func(dist_s)
+    amplitudes = masking_func(dist_s)
+    E_local = hamiltonian.local_energy(H, amplitudes)
     E_mean = torch.mean(E_local)
     E_diff = E_local - E_mean
     DeltaVB = torch.mean(E_diff[:, None]*dPsidvb, axis=0)
@@ -60,6 +61,7 @@ def metropolis_hastings(input, visual_bias, hidden_bias, W):
 
     return input
 \end{minted}
+
 
 We have a simple loop that generates a random number and checks it against the acceptance rate by the machine energy ratio. The Gibbs sampling is done by back and forth sampling of the layers.
 
